# cubejs-client-python

./: .gitignore  API_REFERENCE.md  LICENSE  README.md  RELEASING.md  docs.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cubejs_client/: __init__.py  docs.md  errors.py
src/cubejs_client/client/: async_client.py  base.py  docs.md  subscription.py  sync_client.py
src/cubejs_client/core/: alias.py  cubesql.py  docs.md  js_compat.py  meta.py  pivot_config.py  response_decode.py  result_set.py  time_series.py
src/cubejs_client/models/: progress.py  sql_query.py
src/cubejs_client/query/: builder.py  docs.md  model.py  pivot_config.py  validate.py
src/cubejs_client/results/: docs.md  pandas_adapter.py
src/cubejs_client/transport/: base.py  docs.md  http_async.py  http_sync.py
tests/golden/: fixtures.py  fixtures_compare_blending.py  test_compare_blending_golden.py  test_cubesql_golden.py  test_drill_down_golden.py  test_granularity_golden.py  test_result_set_golden.py  test_time_series_golden.py
tests/unit/: test_client_load.py  test_client_load_async.py  test_cubesql_client.py  test_cubesql_stream.py  test_cubesql_stream_client.py  test_http_transport.py  test_http_transport_async.py  test_load_response_format.py  test_meta_members_grouped_by_cube.py  test_pandas_adapter.py  test_pivot_config_builder.py  test_polling.py  test_polling_async.py  test_query_builder.py  test_query_validate.py  test_response_decode.py  test_subscribe.py
