[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubejs-client"
version = "0.1.0"
description = "Pythonic client for Cube (cube.dev) semantic layer, with pandas integration (sync client; async is a planned later phase)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cubejs_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.mypy]
python_version = "3.10"
packages = ["cubejs_client"]

[[tool.mypy.overrides]]
module = ["dateutil.*", "pandas.*"]
ignore_missing_imports = true
