[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubejs-client"
version = "0.1.0"
description = "Pythonic client for Cube (cube.dev) semantic layer, with pandas integration (sync and async clients)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Andrew Mendez", email = "andrewfmendez@gmail.com" }]
keywords = ["cube", "cubejs", "semantic-layer", "analytics", "pandas", "olap", "business-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "python-dateutil>=2.8",
]

[project.urls]
Homepage = "https://github.com/spark-strategy/cubejs-client-python"
Repository = "https://github.com/spark-strategy/cubejs-client-python"
Issues = "https://github.com/spark-strategy/cubejs-client-python/issues"
Changelog = "https://github.com/spark-strategy/cubejs-client-python/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    # Upper bound is deliberate: ruff enables new rules in minor releases, so an
    # unpinned range turns an unrelated ruff release into a red CI on untouched
    # code (0.16 flags 271 pre-existing pyupgrade findings). Raise this
    # intentionally, together with the fixes the new rules require.
    "ruff>=0.15,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cubejs_client"]
# Internal architecture notes for contributors — not useful to installers.
exclude = ["**/docs.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.mypy]
python_version = "3.10"
packages = ["cubejs_client"]

[[tool.mypy.overrides]]
module = ["dateutil.*", "pandas.*"]
ignore_missing_imports = true
